# axyl-tickets

./: Cargo.toml  axyl_tickets.db  readme.md
.sqlx/: query-07e89f211d73c0838ebd0cd5de379e8ebcd0b940be640816084d9d8486bdf8d9.json  query-094d2177861c9161e3765484ee192e25659d603513f2be9d059506b613d2fd36.json  query-81c1d4802e779ca93c7ec0f48d7c25c566d1c650554eaab3d47d6d3b737ec3f9.json  query-b03d91db9567b9f90f5b176ef6493e0d758a55ec4c38e0154617a5546ecace75.json
migrations/: 20241023000000_initial.sql
src/: bot.rs  commands.rs  config.rs  logging.rs  main.rs
