[package]
name = "axyl_tickets"
version = "0.1.0"
authors = ["Nyx <nnyyxxxx@protonmail.com>", "Adam Perkowski <adas1per@protonmail.com>", "AxylOS <lead@axylprojects.dev>"]
license = "GPL-2.0"
description = "Discord bot for tickets"
repository = "https://github.com/axyl-bot/axyl-tickets.git"
readme = "readme.md"
keywords = [
    "discord",
    "bot",
    "tickets",
]
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serenity = { version = "=0.12.1", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
